// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`quote list inside should identify list inside the quote 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> - one
> - two",
    "tokens": [
      {
        "indent": 0,
        "items": [
          {
            "checked": null,
            "count": null,
            "raw": " - one",
            "tokens": [
              {
                "indent": 0,
                "raw": "one",
                "tokens": [
                  {
                    "raw": "one",
                    "type": "text",
                    "value": "one",
                  },
                ],
                "type": "paragraph",
                "value": "one",
              },
            ],
            "type": "list-item",
          },
          {
            "checked": null,
            "count": null,
            "raw": " - two",
            "tokens": [
              {
                "indent": 0,
                "raw": "two",
                "tokens": [
                  {
                    "raw": "two",
                    "type": "text",
                    "value": "two",
                  },
                ],
                "type": "paragraph",
                "value": "two",
              },
            ],
            "type": "list-item",
          },
        ],
        "meta": {
          "checklist": false,
          "identifier": "-",
          "ordered": false,
        },
        "raw": " - one
 - two",
        "type": "list",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote list inside should identify list inside with multiple separator in between 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> - one
>
>
> - two",
    "tokens": [
      {
        "indent": 0,
        "items": [
          {
            "checked": null,
            "count": null,
            "raw": " - one",
            "tokens": [
              {
                "indent": 0,
                "raw": "one",
                "tokens": [
                  {
                    "raw": "one",
                    "type": "text",
                    "value": "one",
                  },
                ],
                "type": "paragraph",
                "value": "one",
              },
            ],
            "type": "list-item",
          },
          {
            "checked": null,
            "count": null,
            "raw": " - two",
            "tokens": [
              {
                "indent": 0,
                "raw": "two",
                "tokens": [
                  {
                    "raw": "two",
                    "type": "text",
                    "value": "two",
                  },
                ],
                "type": "paragraph",
                "value": "two",
              },
            ],
            "type": "list-item",
          },
        ],
        "meta": {
          "checklist": false,
          "identifier": "-",
          "ordered": false,
        },
        "raw": " - one
 - two",
        "type": "list",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote list inside should identify list inside with single separator in between 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> - one
>
> - two",
    "tokens": [
      {
        "indent": 0,
        "items": [
          {
            "checked": null,
            "count": null,
            "raw": " - one",
            "tokens": [
              {
                "indent": 0,
                "raw": "one",
                "tokens": [
                  {
                    "raw": "one",
                    "type": "text",
                    "value": "one",
                  },
                ],
                "type": "paragraph",
                "value": "one",
              },
            ],
            "type": "list-item",
          },
          {
            "checked": null,
            "count": null,
            "raw": " - two",
            "tokens": [
              {
                "indent": 0,
                "raw": "two",
                "tokens": [
                  {
                    "raw": "two",
                    "type": "text",
                    "value": "two",
                  },
                ],
                "type": "paragraph",
                "value": "two",
              },
            ],
            "type": "list-item",
          },
        ],
        "meta": {
          "checklist": false,
          "identifier": "-",
          "ordered": false,
        },
        "raw": " - one
 - two",
        "type": "list",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote list inside should include a braced codeblock inside 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> normal text
> \`\`\`
> code goes here
> \`\`\`
> normal text again",
    "tokens": [
      {
        "indent": 0,
        "raw": " normal text",
        "tokens": [
          {
            "raw": " normal text",
            "type": "text",
            "value": " normal text",
          },
        ],
        "type": "paragraph",
        "value": " normal text",
      },
      {
        "indent": 0,
        "language": null,
        "raw": " \`\`\`
 code goes here
 \`\`\`",
        "type": "code-block",
        "value": "code goes here",
      },
      {
        "indent": 0,
        "raw": " normal text again",
        "tokens": [
          {
            "raw": " normal text again",
            "type": "text",
            "value": " normal text again",
          },
        ],
        "type": "paragraph",
        "value": " normal text again",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should allow laziness for plain paragraph 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> one quote
> two quote
three quote",
    "tokens": [
      {
        "indent": 0,
        "raw": " one quote
 two quote
three quote",
        "tokens": [
          {
            "raw": " one quote  two quote three quote",
            "type": "text",
            "value": " one quote  two quote three quote",
          },
        ],
        "type": "paragraph",
        "value": " one quote  two quote three quote",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should chill with big quote head 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> > > three hit
> > two hit
>
>
> > two
> > # h-two
> > > three
> > > > four
some",
    "tokens": [
      {
        "depth": 1,
        "indent": 0,
        "raw": " > > three hit
 > two hit",
        "tokens": [
          {
            "depth": 1,
            "indent": 0,
            "raw": " > three hit
 two hit",
            "tokens": [
              {
                "indent": 0,
                "raw": " three hit
 two hit",
                "tokens": [
                  {
                    "raw": " three hit  two hit",
                    "type": "text",
                    "value": " three hit  two hit",
                  },
                ],
                "type": "paragraph",
                "value": " three hit  two hit",
              },
            ],
            "type": "quote",
          },
        ],
        "type": "quote",
      },
      {
        "type": "new-line",
      },
      {
        "depth": 1,
        "indent": 0,
        "raw": " > two
 > # h-two
 > > three
 > > > four
some",
        "tokens": [
          {
            "indent": 0,
            "raw": " two",
            "tokens": [
              {
                "raw": " two",
                "type": "text",
                "value": " two",
              },
            ],
            "type": "paragraph",
            "value": " two",
          },
          {
            "indent": 0,
            "level": 1,
            "raw": " # h-two",
            "setext": false,
            "tokens": [
              {
                "raw": "h-two",
                "type": "text",
                "value": "h-two",
              },
            ],
            "type": "heading",
            "value": "h-two",
          },
          {
            "depth": 1,
            "indent": 0,
            "raw": " > three
 > > four
some",
            "tokens": [
              {
                "indent": 0,
                "raw": " three",
                "tokens": [
                  {
                    "raw": " three",
                    "type": "text",
                    "value": " three",
                  },
                ],
                "type": "paragraph",
                "value": " three",
              },
              {
                "depth": 1,
                "indent": 0,
                "raw": " > four
some",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": " four
some",
                    "tokens": [
                      {
                        "raw": " four some",
                        "type": "text",
                        "value": " four some",
                      },
                    ],
                    "type": "paragraph",
                    "value": " four some",
                  },
                ],
                "type": "quote",
              },
            ],
            "type": "quote",
          },
        ],
        "type": "quote",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '  > quote \`four\` with ~~five~~' 1`] = `
[
  {
    "depth": 1,
    "indent": 2,
    "raw": "  > quote \`four\` with ~~five~~",
    "tokens": [
      {
        "indent": 0,
        "raw": " quote \`four\` with ~~five~~",
        "tokens": [
          {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          {
            "raw": "\`four\`",
            "type": "code",
            "value": "four",
          },
          {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          {
            "raw": "~~five~~",
            "tokens": [
              {
                "raw": "five",
                "type": "text",
                "value": "five",
              },
            ],
            "type": "strike-through",
          },
        ],
        "type": "paragraph",
        "value": " quote \`four\` with ~~five~~",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote ' > > > quote \`four\` with ~~five~~' 1`] = `
[
  {
    "depth": 3,
    "indent": 0,
    "raw": " > > > quote \`four\` with ~~five~~",
    "tokens": [
      {
        "indent": 0,
        "raw": " quote \`four\` with ~~five~~",
        "tokens": [
          {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          {
            "raw": "\`four\`",
            "type": "code",
            "value": "four",
          },
          {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          {
            "raw": "~~five~~",
            "tokens": [
              {
                "raw": "five",
                "type": "text",
                "value": "five",
              },
            ],
            "type": "strike-through",
          },
        ],
        "type": "paragraph",
        "value": " quote \`four\` with ~~five~~",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '' 1`] = `[]`;

exports[`quote should deep tokenize quote '> > > > quote [link-title](link-url) with *two*' 1`] = `
[
  {
    "depth": 4,
    "indent": 0,
    "raw": "> > > > quote [link-title](link-url) with *two*",
    "tokens": [
      {
        "indent": 0,
        "raw": " quote [link-title](link-url) with *two*",
        "tokens": [
          {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          {
            "raw": "[link-title](link-url)",
            "tokens": {
              "href": "link-url",
              "title": {
                "raw": "link-title",
                "tokens": [
                  {
                    "raw": "link-title",
                    "type": "text",
                    "value": "link-title",
                  },
                ],
              },
              "tooltip": undefined,
            },
            "type": "link",
          },
          {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          {
            "raw": "*two*",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "italic",
          },
        ],
        "type": "paragraph",
        "value": " quote [link-title](link-url) with *two*",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '> > quote **one** with *two*' 1`] = `
[
  {
    "depth": 2,
    "indent": 0,
    "raw": "> > quote **one** with *two*",
    "tokens": [
      {
        "indent": 0,
        "raw": " quote **one** with *two*",
        "tokens": [
          {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          {
            "raw": "**one**",
            "tokens": [
              {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "bold",
          },
          {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          {
            "raw": "*two*",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "italic",
          },
        ],
        "type": "paragraph",
        "value": " quote **one** with *two*",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '> quote **one** with *two*' 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> quote **one** with *two*",
    "tokens": [
      {
        "indent": 0,
        "raw": " quote **one** with *two*",
        "tokens": [
          {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          {
            "raw": "**one**",
            "tokens": [
              {
                "raw": "one",
                "type": "text",
                "value": "one",
              },
            ],
            "type": "bold",
          },
          {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          {
            "raw": "*two*",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "italic",
          },
        ],
        "type": "paragraph",
        "value": " quote **one** with *two*",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should deep tokenize quote '> quote [link-title](link-url) with *two*' 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> quote [link-title](link-url) with *two*",
    "tokens": [
      {
        "indent": 0,
        "raw": " quote [link-title](link-url) with *two*",
        "tokens": [
          {
            "raw": " quote ",
            "type": "text",
            "value": " quote ",
          },
          {
            "raw": "[link-title](link-url)",
            "tokens": {
              "href": "link-url",
              "title": {
                "raw": "link-title",
                "tokens": [
                  {
                    "raw": "link-title",
                    "type": "text",
                    "value": "link-title",
                  },
                ],
              },
              "tooltip": undefined,
            },
            "type": "link",
          },
          {
            "raw": " with ",
            "type": "text",
            "value": " with ",
          },
          {
            "raw": "*two*",
            "tokens": [
              {
                "raw": "two",
                "type": "text",
                "value": "two",
              },
            ],
            "type": "italic",
          },
        ],
        "type": "paragraph",
        "value": " quote [link-title](link-url) with *two*",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should leave separators 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> one
> # two
>
>
>
> three",
    "tokens": [
      {
        "indent": 0,
        "raw": " one",
        "tokens": [
          {
            "raw": " one",
            "type": "text",
            "value": " one",
          },
        ],
        "type": "paragraph",
        "value": " one",
      },
      {
        "indent": 0,
        "level": 1,
        "raw": " # two",
        "setext": false,
        "tokens": [
          {
            "raw": "two",
            "type": "text",
            "value": "two",
          },
        ],
        "type": "heading",
        "value": "two",
      },
      {
        "type": "new-line",
      },
      {
        "indent": 0,
        "raw": " three",
        "tokens": [
          {
            "raw": " three",
            "type": "text",
            "value": " three",
          },
        ],
        "type": "paragraph",
        "value": " three",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should lex multiline quote with the circular depth 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> one
> > two
> > > three
> > > > four
> > >
>>> r_three
> >
> > r_two
>
> r_one",
    "tokens": [
      {
        "indent": 0,
        "raw": " one",
        "tokens": [
          {
            "raw": " one",
            "type": "text",
            "value": " one",
          },
        ],
        "type": "paragraph",
        "value": " one",
      },
      {
        "depth": 1,
        "indent": 0,
        "raw": " > two
 > > three
 > > > four
 > >
>> r_three
 >
 > r_two",
        "tokens": [
          {
            "indent": 0,
            "raw": " two",
            "tokens": [
              {
                "raw": " two",
                "type": "text",
                "value": " two",
              },
            ],
            "type": "paragraph",
            "value": " two",
          },
          {
            "depth": 1,
            "indent": 0,
            "raw": " > three
 > > four
 >
> r_three",
            "tokens": [
              {
                "indent": 0,
                "raw": " three",
                "tokens": [
                  {
                    "raw": " three",
                    "type": "text",
                    "value": " three",
                  },
                ],
                "type": "paragraph",
                "value": " three",
              },
              {
                "depth": 1,
                "indent": 0,
                "raw": " > four",
                "tokens": [
                  {
                    "indent": 0,
                    "raw": " four",
                    "tokens": [
                      {
                        "raw": " four",
                        "type": "text",
                        "value": " four",
                      },
                    ],
                    "type": "paragraph",
                    "value": " four",
                  },
                ],
                "type": "quote",
              },
              {
                "type": "new-line",
              },
              {
                "indent": 0,
                "raw": " r_three",
                "tokens": [
                  {
                    "raw": " r_three",
                    "type": "text",
                    "value": " r_three",
                  },
                ],
                "type": "paragraph",
                "value": " r_three",
              },
            ],
            "type": "quote",
          },
          {
            "type": "new-line",
          },
          {
            "indent": 0,
            "raw": " r_two",
            "tokens": [
              {
                "raw": " r_two",
                "type": "text",
                "value": " r_two",
              },
            ],
            "type": "paragraph",
            "value": " r_two",
          },
        ],
        "type": "quote",
      },
      {
        "type": "new-line",
      },
      {
        "indent": 0,
        "raw": " r_one",
        "tokens": [
          {
            "raw": " r_one",
            "type": "text",
            "value": " r_one",
          },
        ],
        "type": "paragraph",
        "value": " r_one",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should not be lazy with heading 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> one
> # two
> three",
    "tokens": [
      {
        "indent": 0,
        "raw": " one",
        "tokens": [
          {
            "raw": " one",
            "type": "text",
            "value": " one",
          },
        ],
        "type": "paragraph",
        "value": " one",
      },
      {
        "indent": 0,
        "level": 1,
        "raw": " # two",
        "setext": false,
        "tokens": [
          {
            "raw": "two",
            "type": "text",
            "value": "two",
          },
        ],
        "type": "heading",
        "value": "two",
      },
      {
        "indent": 0,
        "raw": " three",
        "tokens": [
          {
            "raw": " three",
            "type": "text",
            "value": " three",
          },
        ],
        "type": "paragraph",
        "value": " three",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should not be lazy with heading 2`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> # one
> two
> three",
    "tokens": [
      {
        "indent": 0,
        "level": 1,
        "raw": " # one",
        "setext": false,
        "tokens": [
          {
            "raw": "one",
            "type": "text",
            "value": "one",
          },
        ],
        "type": "heading",
        "value": "one",
      },
      {
        "indent": 0,
        "raw": " two
 three",
        "tokens": [
          {
            "raw": " two  three",
            "type": "text",
            "value": " two  three",
          },
        ],
        "type": "paragraph",
        "value": " two  three",
      },
    ],
    "type": "quote",
  },
]
`;

exports[`quote should split with heading in between 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> one quote
> two quote",
    "tokens": [
      {
        "indent": 0,
        "raw": " one quote
 two quote",
        "tokens": [
          {
            "raw": " one quote  two quote",
            "type": "text",
            "value": " one quote  two quote",
          },
        ],
        "type": "paragraph",
        "value": " one quote  two quote",
      },
    ],
    "type": "quote",
  },
  {
    "indent": 0,
    "level": 1,
    "raw": "# three quote",
    "setext": false,
    "tokens": [
      {
        "raw": "three quote",
        "type": "text",
        "value": "three quote",
      },
    ],
    "type": "heading",
    "value": "three quote",
  },
]
`;

exports[`quote should split with new lines in between 1`] = `
[
  {
    "depth": 1,
    "indent": 0,
    "raw": "> one quote",
    "tokens": [
      {
        "indent": 0,
        "raw": " one quote",
        "tokens": [
          {
            "raw": " one quote",
            "type": "text",
            "value": " one quote",
          },
        ],
        "type": "paragraph",
        "value": " one quote",
      },
    ],
    "type": "quote",
  },
  {
    "type": "new-line",
  },
  {
    "depth": 1,
    "indent": 0,
    "raw": "> two quote
three quote",
    "tokens": [
      {
        "indent": 0,
        "raw": " two quote
three quote",
        "tokens": [
          {
            "raw": " two quote three quote",
            "type": "text",
            "value": " two quote three quote",
          },
        ],
        "type": "paragraph",
        "value": " two quote three quote",
      },
    ],
    "type": "quote",
  },
]
`;
